# backend/docs/swagger.yaml
@@ -23,8 +23,6 @@ definitions:
         type: integer
       insuranceAddress:
         type: string
-      insuranceIdentification:
-        type: string
       insuranceInsurer:
         type: string
       insuranceTimeBuy:
@@ -67,10 +65,6 @@ definitions:
         type: integer
       moneytransferID:
         type: integer
-      phoneNumber:
-        type: string
-      price:
-        type: number
       transferTime:
         type: string
     type: object
@@ -315,10 +309,6 @@ definitions:
       insurance_address:
         description: InsuranceAddress holds the value of the "insurance_address" field.
         type: string
-      insurance_identification:
-        description: InsuranceIdentification holds the value of the "insurance_identification"
-          field.
-        type: string
       insurance_insurer:
         description: InsuranceInsurer holds the value of the "insurance_insurer" field.
         type: string
@@ -544,12 +534,6 @@ definitions:
       id:
         description: ID of the ent.
         type: integer
-      phone_number:
-        description: PhoneNumber holds the value of the "phone_number" field.
-        type: string
-      price:
-        description: Price holds the value of the "price" field.
-        type: number
       transfer_time:
         description: TransferTime holds the value of the "transfer_time" field.
         type: string
