# backend/ent/schema/payment.go
@@ -17,9 +17,7 @@ type Payment struct {
 func (Payment) Fields() []ent.Field {
 	return []ent.Field{
 		field.String("account_name").NotEmpty(),
-		field.String("account_number").MinLen(10).MaxLen(10),
-		field.String("phone_number").MinLen(10).MaxLen(10),
-		field.Float("price").Min(0).Positive(),
+		field.String("account_number").NotEmpty(),
 		field.Time("transfer_time").Default(time.Now),
 	}
 }
